# testtestmusic

./: .dockerignore  Dockerfile  Dockerfile.frontend  README.md  kubernetes.yaml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: cd-dev.yml  ci.yml
cloud-native-superapp/: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  package.json  prometheus.yml
cloud-native-superapp/.github/workflows/: cd-dev.yml  ci.yml
cloud-native-superapp/backend/: Dockerfile  pyproject.toml
cloud-native-superapp/backend/src/: main.py
cloud-native-superapp/backend/tests/unit/: test_main.py
cloud-native-superapp/docs/: architecture.md
cloud-native-superapp/docs/decisions/: 0001-use-aks.md  0002-use-managed-database-backups.md
cloud-native-superapp/frontend/: Dockerfile  package.json  tailwind.config.ts
cloud-native-superapp/frontend/.next/: trace
cloud-native-superapp/frontend/.next/cache/: .rscinfo
cloud-native-superapp/infra/: README.md
cloud-native-superapp/k8s/base/: kustomization.yaml
cloud-native-superapp/k8s/platform/: README.md  kustomization.yaml
cloud-native-superapp/scripts/: backup.sh  deploy.sh
docs/: blueprint.md
src/ai/: dev.ts
src/ai/flows/: generate-cli-command.ts  generate-configuration.ts
src/app/: globals.css  layout.tsx
src/app/(main)/: layout.tsx  page.tsx
src/app/(main)/_components/: main-nav.tsx  (+1 more)
src/components/: code-block.tsx  icons.tsx  page-header.tsx
src/components/ui/: card.tsx
src/hooks/: use-copy-to-clipboard.ts
src/lib/: actions.ts  schemas.ts
(+45 files in other folders)
